@@ -142,8 +142,7 @@
                </excludes>
                <forkCount>1</forkCount>
                <reuseForks>false</reuseForks>
-               <argLine>-Xms64m -Xmx512m -XX:MaxPermSize=256M -enableassertions -XX:+HeapDumpOnOutOfMemoryError ${jacoco.argLine}</argLine>
-               <junitArtifactName>junit:junit-dep</junitArtifactName>
+               <argLine> ${jacoco.argLine}</argLine>
             </configuration>
          </plugin>
 			
@@ -151,6 +150,9 @@
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.8.0</version>
+            <configuration>
+                <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
+            </configuration>
             <executions>
                 <execution>
                     <id>jacoco-initialize</id>
